fix overlap on title card

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+.title {
+    font-size: 1rem;
+}
+
 .is-flex-direction-column {
 	flex-direction: column;
 }
